<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <ImageButton
                style="@style/bar_component"
                android:contentDescription="@string/menu"
                android:src="@drawable/outline_menu"
                android:background="@android:color/transparent"
                />
            <TextView
                style="@style/bar_component"
                android:text="@string/shop"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:paddingTop="15dp"
                />

            <androidx.appcompat.widget.SearchView
                android:layout_width="220dp"
                android:layoutDirection="rtl"
                style="@style/bar_component"/>

            <ImageButton
                style="@style/bar_component"
                android:contentDescription="@string/cart"
                android:src="@drawable/shopping_cart"
                android:background="@android:color/transparent"
                />
        </LinearLayout>
        
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/featured"
                style="@style/tab"/>
            <TextView
                android:text="@string/deals"
                style="@style/tab"/>
            <TextView
                android:text="@string/categories"
                style="@style/tab"
                android:textColor="@color/white"/>
        </GridLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>