<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.Material3.Dark">
            <ImageButton
                style="@style/bar_component"
                android:contentDescription="@string/menu"
                android:src="@drawable/outline_menu" />
            <TextView
                style="@style/bar_component"
                android:text="@string/shop"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <androidx.appcompat.widget.SearchView
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layoutDirection="rtl"
                android:theme="@style/ThemeOverlay.Material3.Dark" />
        </androidx.appcompat.widget.Toolbar>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                style="@style/tab"
                android:text="@string/featured" />
            <TextView
                style="@style/tab"
                android:text="@string/deals" />
            <TextView
                style="@style/tab"
                android:text="@string/categories"
                android:textColor="@color/white" />
        </GridLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>